<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".tab.tab3_self.Filtering">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="15dp"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"

        android:text="@string/filtering_title"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <RelativeLayout
        android:id="@+id/types"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_below="@id/title">

        <TextView
            android:id="@+id/type1"
            android:layout_width="100dp"
            android:layout_height="100dp"

            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:paddingTop="35dp"

            android:background="@drawable/filtering_border_base"

            android:text="@string/filtering_type1"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/type2"
            android:layout_width="100dp"
            android:layout_height="100dp"

            android:layout_toRightOf="@id/type1"
            android:layout_alignTop="@id/type1"
            android:layout_marginLeft="20dp"
            android:paddingTop="35dp"

            android:background="@drawable/filtering_border_base"

            android:text="@string/filtering_type2"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/type3"
            android:layout_width="100dp"
            android:layout_height="100dp"

            android:layout_toRightOf="@id/type2"
            android:layout_alignTop="@id/type1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            android:paddingTop="35dp"

            android:background="@drawable/filtering_border_base"

            android:text="@string/filtering_type3"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/type4"
            android:layout_width="100dp"
            android:layout_height="100dp"

            android:layout_below="@id/type1"
            android:layout_alignLeft="@id/type1"
            android:layout_marginTop="20dp"
            android:paddingTop="35dp"

            android:background="@drawable/filtering_border_base"

            android:text="@string/filtering_type4"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/type5"
            android:layout_width="100dp"
            android:layout_height="100dp"

            android:layout_toRightOf="@id/type4"
            android:layout_alignTop="@id/type4"
            android:layout_marginLeft="20dp"

            android:background="@drawable/filtering_border_base"

            android:text="@string/filtering_type5"
            android:paddingTop="35dp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/type6"
            android:layout_width="100dp"
            android:layout_height="100dp"

            android:layout_toRightOf="@id/type5"
            android:layout_alignTop="@id/type4"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            android:background="@drawable/filtering_border_base"

            android:text="@string/filtering_type6"
            android:paddingTop="35dp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/type7"
            android:layout_width="100dp"
            android:layout_height="100dp"

            android:layout_below="@id/type4"
            android:layout_alignLeft="@id/type4"
            android:layout_marginTop="20dp"
            android:paddingTop="35dp"

            android:background="@drawable/filtering_border_base"

            android:text="@string/filtering_type7"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="20sp"/>

    </RelativeLayout>

    <ImageButton
        android:id="@+id/check"
        android:layout_width="60dp"
        android:layout_height="60dp"

        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        android:scaleType="fitXY"
        android:background="#00000000"
        android:src="@drawable/list_check_mark" />

</RelativeLayout>
