<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1.5"

        android:gravity="center"

        android:text="@string/result_check_title"
        android:textColor="@color/black"
        android:textSize="17dp" />

    <ImageView
        android:id="@+id/underline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/textTitle"
        android:layout_marginTop="5dp"
        android:layout_marginRight="80dp"
        android:layout_marginLeft="80dp"

        android:src="@drawable/underline"
        />


    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"

        android:layout_marginRight="10dp"
        android:layout_weight="8"

        android:choiceMode="singleChoice"

        android:divider="#00000000"
        android:dividerHeight="15dp"
        android:scrollbars="vertical"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#888888">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end"
            android:padding="10dp"
            android:src="@drawable/check_yellow" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:text="@string/result_check_yellow"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="end"
            android:padding="10dp"
            android:src="@drawable/check_pink" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/result_check_pink"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="end"
            android:padding="10dp"
            android:src="@drawable/check_blue" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/result_check_blue"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>
